--- a/posts/anomaly_detection/index.qmd
+++ b/posts/anomaly_detection/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Anmoly Detection with DBSCAN and Isolation Forest"
+title: "Anomaly Detection with DBSCAN and Isolation Forest"
 author: Xuhui Zeng
 date: now
 categories: 
